--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
     <script>
         // === CẤU HÌNH & TRẠNG THÁI ===
-        const CONFIG = { modelId: "gemini-2.0-flash-exp", historyLimit: 20 }; // Dùng model mới nhất
+        const CONFIG = { modelId: "gemini-2.5-flash", historyLimit: 20 }; // Dùng model mới nhất
         let state = {
             apiKey: localStorage.getItem('gpt_key') || "",
             userName: localStorage.getItem('gpt_name') || "Bạn",
