Update modelId in CONFIG to gemini-2.5-flash

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <script>
         // === CẤU HÌNH ===
         // Sử dụng model Flash 2.0 Experimental (Nhanh và mới nhất hiện tại)
-        const CONFIG = { modelId: "gemini-2.0-flash-exp", historyLimit: 20 }; 
+        const CONFIG = { modelId: "gemini-2.5-flash", historyLimit: 20 }; 
         
         let state = {
             apiKey: localStorage.getItem('gpt_key') || "",
