Update GitHub token label and value in index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <input type="password" id="cfgKey">
             </div>
             <div class="input-group">
-                <label>GitHub Token (Đã điền sẵn):</label>
+                <label>GitHub Token :</label>
                 <input type="password" id="ghToken">
             </div>
             <div class="input-group">
@@ -211,7 +211,7 @@
     <script>
         // === ENV SECRETS (ĐIỀN SẴN) ===
         const ENV = {
-            GH_TOKEN: "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", // Token của bạn
+            GH_TOKEN: "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, // Token của bạn
             MODEL_ID: "gemini-2.5-flash",
             HISTORY_LIMIT: 100
         };
