--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             ghOwner: "YOUR_USER",
             ghRepo: "YOUR_REPO",     
             chatModel: "gemini-2.5-flash-lite",  
-            voiceModel: "gemini-live-2.5-flash-native-audio" 
+            voiceModel: "gemini-2.5-flash-native-audio-preview-12-2025" 
         };
 
         /* * LƯU Ý QUAN TRỌNG: 
